# torrent-manager

./: .catignore  .env.example  .gitignore  AUTHENTICATION.md  CLIENT_USAGE.md  METADATA.json  METADATA_PLAN.md  PLAN.md  README.md  SEEDING_PLAN.md  USAGE.md  cat.md  pyproject.toml  requirements.txt  run.py  run_server.py  t1.py  temp_migrate_db.py  tm_cli.py
examples/: api_key_example.py  auth_example.py  example_callback.py
src/torrent_manager/: activity.py  config.py  dbs.py  docker_rtorrent.py  models.py  rtorrent_client.py  torrent_file.py  utils.py
tests/: conftest.py  test_activity.py  test_api_download.py  test_api_keys.py  test_auth.py  test_docker_rtorrent.py  test_manager.py  test_rss.py  test_rtorrent_client.py  test_rtorrent_load_target.py  test_seeding_duration_fix.py  test_servers.py  test_torrent_file.py  test_torrent_url_rate_limit.py  test_transfer_circuit_breaker.py  test_transfers.py  test_transmission_client.py
torrent_manager/: __init__.py  __main__.py  activity.py  api.py  auth.py  base_client.py  callbacks.py  cli.py  client.py  client_factory.py  config.py  dbs.py  logger.py  magnet_link.py  magnet_resolver.py  manager.py  metadata_service.py  models.py  nginx_http.py  polling.py  rss.py  rtorrent_client.py  rtorrent_server.py  server.py  torrent_adder.py  torrent_file.py  trackers.py  transfer.py  transmission_client.py  utils.py
torrent_manager/api/: __init__.py  constants.py  dependencies.py  main.py  schemas.py
torrent_manager/api/routes/: admin.py  auth.py  pages.py  rss.py  servers.py  torrents.py
torrent_manager/static/: admin.html  api_keys.html  app.js  index.html  login.html  rss.html  servers.html  style.css
torrent_manager/static/js/: ._dashboard.js  admin.js  api_keys.js  auth.js  common.js  dashboard.js  rss.js  servers.js
