[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torrent-manager"
version = "0.1.0"
description = "A Python application for managing torrent client instances with a secure REST API"
readme = "README.md"
license = {text = "CC0-1.0"}
authors = [
    {name = "Philip Orange", email = "git@philiporange.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Systems Administration",
]
keywords = ["torrent", "rtorrent", "transmission", "api", "cli"]

dependencies = [
    "bencodepy",
    "docker",
    "fastapi",
    "httpx",
    "loguru",
    "magnet2torrent",
    "passlib[bcrypt]",
    "peewee",
    "python-dotenv",
    "python-multipart",
    "requests",
    "transmission-rpc",
    "uvicorn",
]

[project.optional-dependencies]
libtorrent = ["libtorrent"]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
torrent-manager = "torrent_manager.cli:main"
torrent-manager-server = "torrent_manager.server:main"

[project.urls]
Homepage = "https://github.com/philiporange/torrent-manager"
Repository = "https://github.com/philiporange/torrent-manager"

[tool.setuptools]
packages = ["torrent_manager", "torrent_manager.api", "torrent_manager.api.routes"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
